
  * When retrying network requests, the back-off time now includes a
    random factor to avoid accidentally flooding the server with too
    many simultanuous requests.

  * Fixed a problem with fsck.s3ql aborting with a "ConstraintError"
    in some situations.

  * Fixed a problem with fsck.s3ql repeatedly renaming a file in
    /lost+found because it may lack data.

2015-09-18, S3QL 2.15

  * Fixed a compatibility problem with recent versions of
    Python-LLFUSE (0.41 and newer).

  * S3QL now supports using special characters in the prefix
    for S3 buckets. Previously, characters that would need to
    be percent-encoded when part of an URL (like + or %) would
    result in a crash.

2015-07-31, S3QL 2.14

  * S3QL now longer crashes when the server sends a zero-length
    response that claims to be XML.

  * The default tcp-timeout has been increased from 10 seconds to 20
    seconds.

  * Fixed test failures when FUSE is not available, tests should now
    again be skipped.

  * S3QL now tracks the frequency of server errors and logs warnings
    if they occur more often than 5 times per second over a period of
    at least 60 seconds. Previously, retries would only be logged
    if the same request has been retried more than 3 times.

  * The "s3qlctrl cachesize" command is now working again (previously
    it would appear to succeed, but not actually change the cache
    size).

  * 404 errors when retrying a delete request are now ignored - most
    likely they mean that the server actually received and executed
    the previous try.

  * Fixed an issue with fsck.s3ql crashing when trying to create a
    file with a very long name in /lost+found.

2015-01-31, S3QL 2.13

  * The internal file system revision has changed. File systems
    created with S3QL 2.13 or newer are not compatible with prior S3QL
    versions.

    To update an existing file system to the newest revision, use the